<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="org.csystem.android.app.ui.MainActivity">

    <ToggleButton
        android:id="@+id/mainActivityToggleButtonOpen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/open_toggle_on_text"
        android:textOff="@string/open_toggle_off_text" />

    <LinearLayout
        android:id="@+id/mainActivityLinearLayoutOperation"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onTextViewMessageClicked"
            android:text="@string/message_textview"
            tools:ignore="UsingOnClickInXml" />

        <EditText
            android:id="@+id/mainActivityEditTextMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/message_edittext_hint" />

        <EditText
            android:id="@+id/mainActivityEditTextOptionalMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:visibility="gone"
            android:hint="@string/message_edittext_hint" />

        <Button
            android:id="@+id/mainActivityButtonOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_button_text" />

        <TextView
            android:id="@+id/mainActivityTextViewMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/mainActivityCheckBoxAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept_checkbox_text" />
        <Switch
            android:id="@+id/mainActivitySwitchReverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reverse_switch_text"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/mainActivitySwitchOptionalMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optinal_message_switch_text"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainActivityLinearLayoutChecks"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:id="@+id/mainActivitySwitchEnable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_switch_text"
            android:checked="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <Button
        android:id="@+id/mainActivityButtonExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_button_text" />

</LinearLayout>